Lab 3/MCU_MPU-main/.metadata/.plugins/org.eclipse.cdt.ui/lab3raw.build.log
12:29:30 **** Incremental Build of configuration Debug for project lab3raw ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/led_blink.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/led_blink.d" -MT"Core/Src/led_blink.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/led_blink.o"
../Core/Src/led_blink.c:10:10: error: empty filename in #include
   10 | #include ""
      |          ^~
make: *** [Core/Src/subdir.mk:52: Core/Src/led_blink.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

12:29:31 Build Failed. 2 errors, 0 warnings. (took 375ms)

